--- a/sw-security/package.json
+++ b/sw-security/package.json
@@ -15,9 +15,11 @@
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
     "axios": "^1.7.9",
+    "cookies-next": "^5.1.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.2",
