--- a/sw-security/package.json
+++ b/sw-security/package.json
@@ -16,6 +16,7 @@
     "@remix-run/serve": "^2.15.2",
     "axios": "^1.7.9",
     "cookies-next": "^5.1.0",
+    "http-proxy-middleware": "^3.0.3",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
