--- a/sw-security/package.json
+++ b/sw-security/package.json
@@ -20,7 +20,8 @@
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.2",
