--- a/sw-security/package.json
+++ b/sw-security/package.json
@@ -16,8 +16,10 @@
     "@remix-run/serve": "^2.15.2",
     "axios": "^1.7.9",
     "cookies-next": "^5.1.0",
+    "dompurify": "^3.2.4",
     "http-proxy-middleware": "^3.0.3",
     "isbot": "^4.1.0",
+    "marked": "^15.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
