--- a/sw-security/package.json
+++ b/sw-security/package.json
@@ -11,27 +11,37 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@remix-run/architect": "^2.16.0",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "cookies-next": "^5.1.0",
     "dompurify": "^3.2.4",
+    "esbuild": "^0.25.0",
     "http-proxy-middleware": "^3.0.3",
     "isbot": "^4.1.0",
     "marked": "^15.0.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.758.0",
+    "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/client-sns": "^3.758.0",
+    "@aws-sdk/client-sqs": "^3.758.0",
+    "@aws-sdk/client-ssm": "^3.758.0",
+    "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "@pulumi/pulumi": "^3.153.0",
     "@remix-run/dev": "^2.15.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
+    "aws-lambda": "^1.0.7",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
