--- a/sw-security/infrastructure/package.json
+++ b/sw-security/infrastructure/package.json
@@ -9,6 +9,7 @@
         "@pulumi/aws": "^6.0.0",
         "@pulumi/awsx": "^2.0.2",
         "@pulumi/pulumi": "^3.113.0",
-        "@pulumi/synced-folder": "^0.11.1"
+        "@pulumi/synced-folder": "^0.11.1",
+        "pulumi": "^0.0.1"
     }
 }
